# Proyecto-Percepcion-Arus

./: README.md
my_simulator/: CMakeLists.txt  package.xml
my_simulator/include/my_simulator/: my_simulator.hpp
my_simulator/msg/: Cone.msg
my_simulator/src/: main.cpp  my_simulator.cpp
my_simulator/tracks/: circuit.csv
